apps/manifests/remote-dev-vm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: remote-dev-vm
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
